implemented basic script generation logic

--- a/src/SSDTLifecycleExtension/Windows/ConfigurationWindowControl.xaml
+++ b/src/SSDTLifecycleExtension/Windows/ConfigurationWindowControl.xaml
@@ -405,7 +405,7 @@
                                 <Run Text="{}{MINOR}"
                                      FontStyle="Italic"/>
                                 <LineBreak/>
-                                <Run Text="{}{PATCH}"
+                                <Run Text="{}{BUILD}"
                                      FontStyle="Italic"/>
                                 <LineBreak/>
                                 <Run Text="{}{REVISION}"
