--- a/src/SSDTLifecycleExtension/Windows/ScriptCreationWindowControl.xaml
+++ b/src/SSDTLifecycleExtension/Windows/ScriptCreationWindowControl.xaml
@@ -5,16 +5,33 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:vsshell="clr-namespace:Microsoft.VisualStudio.Shell;assembly=Microsoft.VisualStudio.Shell.15.0"
              xmlns:viewModels="clr-namespace:SSDTLifecycleExtension.ViewModels"
+             xmlns:converters="clr-namespace:SSDTLifecycleExtension.Converters"
              Background="{DynamicResource {x:Static vsshell:VsBrushes.WindowKey}}"
              Foreground="{DynamicResource {x:Static vsshell:VsBrushes.WindowTextKey}}"
              mc:Ignorable="d"
              d:DesignHeight="300"
              d:DesignWidth="300"
              d:DataContext="{d:DesignInstance viewModels:ScriptCreationViewModel,IsDesignTimeCreatable=False}">
+
+    <UserControl.Resources>
+        <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
+    </UserControl.Resources>
+
     <Grid>
-        <Button Content="Start creation"
-                Command="{Binding StartCreationCommand, Mode=OneWay}"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"/>
+        <GroupBox Header="Scaffolding"
+                  Visibility="{Binding Scaffolding, Converter={StaticResource BoolToVisibilityConverter}}"
+                  HorizontalAlignment="Stretch"
+                  VerticalAlignment="Stretch">
+
+        </GroupBox>
+        <GroupBox Header="Creation"
+                  Visibility="{Binding Scaffolding, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=invert}"
+                  HorizontalAlignment="Stretch"
+                  VerticalAlignment="Stretch">
+            <Button Content="Start creation"
+                    Command="{Binding StartCreationCommand, Mode=OneWay}"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"/>
+        </GroupBox>
     </Grid>
 </UserControl>
